# polygon-scan-python

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  run_tests.sh  test.sh
.github/workflows/: python-app.yml
polygon_scan/: __init__.py  const.py  datatypes.py  exceptions.py  polygon_scan.py  utils.py
polygon_scan/http_client/: __init__.py  client.py  const.py  datatypes.py  exceptions.py  rate_limiter.py  retry.py
polygon_scan/modules/: __init__.py  account.py  base.py  block.py  contract.py  gastracker.py  geth_proxy.py  logs.py  stats.py  token.py  transaction.py
tests/: __init__.py  custom_betamax.py  test_polygon_scan.py  test_polygon_scan_python.py
tests/fixtures/cassettes/: test_account.test_get_account_balance.json  test_account.test_get_account_internal_transactions.json  test_account.test_get_account_normal_txns.json  test_account.test_get_blocks_validated_by_address.json  test_account.test_get_erc20_token_transfer_events_by_address.json  test_account.test_get_erc721_token_transfer_events_by_address.json  test_account.test_get_historical_account_balance_by_blockno__raises_api_exc.json  test_account.test_get_internal_transactions_by_block_range.json  test_account.test_get_internal_transactions_by_transaction_hash.json  test_account.test_get_multi_accounts_balances.json  test_block.test_get_block_number_by_timestamp.json  (+16 more)
tests/http_client/: test_rate_limiter.py
tests/modules/: test_account.py  test_block.py  test_contract.py  test_gas_tracker.py  test_geth_proxy.py  test_logs.py  test_stats.py  test_token.py  test_transaction.py
